--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
       crossorigin="anonymous"
     />
 
+    <script
+      src="https://kit.fontawesome.com/e9d76f9746.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Dictionary App</title>
   </head>
   <body>
